# ec-video-generator

./: .gitignore  EC_Video_Generator.spec  README.md  pyproject.toml  setup_ffmpeg.py
src/: main.py
src/core/: ai_editor.py  generator.py  gpu_utils.py
src/ui/: main_window.py  styles.py
